[package]
name = "quorizero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
#pyo3 = "0.18"
#numpy = "0.18"
#cpython = "0.7"
rand ="0.6.5"
tch = "0.13.0"
websocket = "0.24"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",
    "fast-rng",
]

