[package]
name = "quorizero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
#pyo3 = "0.18"
#numpy = "0.18"
#cpython = "0.7"
rand ="0.6.5"
tokio = { version = "1.37.0", features = ["full"] }
tch = "0.15.0"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",
    "fast-rng",
]

